[gd_scene load_steps=4 format=3 uid="uid://dx8j1h6gp20xq"]

[ext_resource type="Script" path="res://Scripts/Clock.gd" id="1_8agj4"]
[ext_resource type="Texture2D" uid="uid://bc43hv07fijyd" path="res://Art/moon.png" id="2_i61qd"]
[ext_resource type="Texture2D" uid="uid://elg0p52jee1r" path="res://Art/sun.png" id="3_q12hb"]

[node name="Clock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -144.0
offset_right = -1380.0
offset_bottom = -792.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8agj4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -39.0
offset_right = 244.0
offset_bottom = 29.0
color = Color(1, 1, 1, 0.666667)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 205.0
offset_bottom = 27.0
theme_override_constants/separation = 0

[node name="ProgressBar_day" type="ProgressBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 6.0
show_percentage = false

[node name="ProgressBar_night" type="ProgressBar" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 37.0
offset_right = 120.0
offset_bottom = 60.0

[node name="Moon" type="Sprite2D" parent="."]
position = Vector2(224, 14)
texture = ExtResource("2_i61qd")

[node name="Sun" type="Sprite2D" parent="."]
position = Vector2(-24, 14)
texture = ExtResource("3_q12hb")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
